# RoboClaw

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
skills/eap-data-collection/: SKILL.md
skills/long-horizon-execution/: SKILL.md
skills/monitored-subtask-execution/: SKILL.md
skills/monitored-subtask-execution/references/: mcp-tool-map.md
src/agent_demo/agent_layer/agent_components/agent_tools/: agent_tools.py
src/agent_demo/agent_layer/agent_components/llm_manager/openai_client/: openai_client.py
src/agent_demo/agent_layer/agent_core/img_act_agent/: img_act_agent.py
src/agent_demo/interaction_layer/gradio_ui/: gradio_ui.py
src/agent_demo/interaction_layer/tui/: olympus_tui.py
src/agent_demo/machine_layer/: dataloader_factory.py  dataloader_mock.py  dataloader_x2robot.py
src/mcp_server_demo/corobot_mcp_server/: mock_corobot_server.py
src/mcp_server_demo/data_analyst_mcp_server/: pyproject.toml
src/mcp_server_demo/x2robot_mcp_server/: README.md  mock_x2robot_bridge.py  pyproject.toml
src/mcp_server_demo/x2robot_mcp_server/src/: server.py
